# MCP9600-Pico

./: CMakeLists.txt  README.md
drivers/: driver_mcp9600_basic.c  driver_mcp9600_basic.h  driver_mcp9600_interrupt.c  driver_mcp9600_interrupt.h  driver_mcp9600_shot.c  driver_mcp9600_shot.h
interface/: driver_mcp9600_interface.c  driver_mcp9600_interface.h
src/: driver_mcp9600.c  driver_mcp9600.h
